--- a/package.json
+++ b/package.json
@@ -15,22 +15,23 @@
         "classnames": "2.2.6",
         "react": "16.8.6",
         "react-dom": "16.8.6",
+        "react-spring": "8.0.19",
         "react-vanilla-tilt": "1.0.0",
         "sanitize.css": "8.0.0"
     },
     "devDependencies": {
-        "@babel/core": "7.4.3",
-        "@babel/preset-env": "7.4.3",
-        "@babel/register": "7.4.0",
+        "@babel/core": "7.4.4",
+        "@babel/preset-env": "7.4.4",
+        "@babel/register": "7.4.4",
         "@lectrum/eslint-config-core": "1.1.15",
         "app-root-path": "2.2.1",
         "babel-plugin-dynamic-import-node": "2.2.0",
         "cross-env": "5.2.0",
         "moment": "2.24.0",
-        "nodegit": "0.24.1",
+        "nodegit": "0.24.2",
         "postcss-preset-env": "6.6.0",
         "react-app-rewire-postcss": "3.0.2",
-        "react-app-rewired": "2.1.1",
-        "react-scripts": "2.1.8"
+        "react-app-rewired": "2.1.3",
+        "react-scripts": "3.0.0"
     }
 }
